[tool.poetry]
name = "redis-sync"
version = "0.1.3"
description = "Simple tool to copy keys between Redis servers"
authors = ["Jashandeep Sohi <jsohi@lco.global>"]
readme = "README.rst"
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.2.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
redis-sync = "redis_sync:cli"
